<resources>
    <string name="app_name">MovieApp</string>
    <string name="upcoming">Upcoming</string>
    <string name="contentDescription">image</string>
    <string name="title_activity_tab_menu">TabMenu</string>
    <string name="tab_text_1">Series</string>
    <string name="tab_text_2">Film</string>
    <string name="tab_text_3">My List</string>
    <string name="title_activity_tab_main">TabMain</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="series">Series</string>
    <string name="movies">Movies</string>
    <string name="my_list">My List</string>
    <string name="latest_series">Latest Series</string>
    <string name="trending_now">Trending Now</string>
    <string name="title_activity_kosomdaapp">kosomdaapp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>