<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_marginHorizontal="50dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_margin="10dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/selected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white" />

            <View
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seriesTab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/series"
                android:textColor="@color/colorTextOn"
                android:textStyle="bold" />

            <View
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/moviesTab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/movies"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/myListTab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/my_list"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>